structured cmake 1st commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,9 @@
 project(ibvs)
-cmake_minimum_required(VERSION 2.8)
-# find_package(VISP REQUIRED)
-# find_package(OpenCV REQUIRED)
+cmake_minimum_required(VERSION 3.0)
 
-add_library(testlib 
-            TestClass.cpp
-            TestClass.h)
 
-add_executable(ibvs main.cpp)
-target_link_libraries(ibvs PRIVATE testlib)
+add_executable(ibvs src/main.cpp)
+
+add_subdirectory(lib/TestClass)
+target_link_libraries(ibvs TestClass)
 
