--- a/lib/TestClass/CMakeLists.txt
+++ b/lib/TestClass/CMakeLists.txt
@@ -1,7 +1,5 @@
-project(testclass)
-cmake_minimum_required(VERSION 2.8)
-# find_package(VISP REQUIRED)
-# find_package(OpenCV REQUIRED)
+cmake_minimum_required(VERSION 3.0)
+project(TestClass)
 
 add_library(TestClass 
             src/TestClass.cpp
