add sub_dir cmake commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
 project(ibvs)
 cmake_minimum_required(VERSION 3.0)
 
-
-add_executable(ibvs src/main.cpp)
-
 add_subdirectory(lib/TestClass)
-target_link_libraries(ibvs TestClass)
+add_subdirectory(src)
+
 
