--- a/lib/TestClass/CMakeLists.txt
+++ b/lib/TestClass/CMakeLists.txt
@@ -4,3 +4,5 @@ project(TestClass)
 add_library(TestClass 
             src/TestClass.cpp
             src/TestClass.h)
+
+target_include_directories(TestClass PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src") 
