add successful buil commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(ibvs)
 cmake_minimum_required(VERSION 3.0)
 
-add_subdirectory(lib/TestClass)
+add_subdirectory(include/TestClass)
 add_subdirectory(src)
 
 
