initial commit to the camera class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,17 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 ## Install libraries (if any) to <install_directory>/bin
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+find_package(VISP REQUIRED)
+find_package(OpenCV REQUIRED)
+
+# message(STATUS "    include path: ${VISP_INCLUDE_DIRS}")
+# message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
+
+include_directories(${VISP_INCLUDE_DIRS})
+
 # set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-add_subdirectory(include/TestClass)
+# add_subdirectory(include/TestClass)
+add_subdirectory(include/CameraClass)
 add_subdirectory(src)
 
 
