--- a/include/CameraClass/CMakeLists.txt
+++ b/include/CameraClass/CMakeLists.txt
@@ -5,6 +5,8 @@ add_library(CameraClass
             src/Camera.cpp
             src/Camera.h)
 
+target_link_libraries(CameraClass 
+                        ${VISP_LIBRARIES} 
+                        ${OpenCV_LIBS})
+                        
 target_include_directories(CameraClass PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src") 
-target_link_libraries(CameraClass ${VISP_LIBRARIES})
-target_link_libraries(CameraClass ${OpenCV_LIBS} )
