--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,14 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 find_package(VISP REQUIRED)
 find_package(OpenCV REQUIRED)
+# set the flycapture directory 
+set(FLYCAPTURE_INCLUDE_DIRS "/usr/include/flycapture")
 
 message(STATUS "    include path: ${VISP_INCLUDE_DIRS}")
 message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
 
 include_directories(${VISP_INCLUDE_DIRS})
-include_directories("/usr/include/flycapture")
+include_directories(${FLYCAPTURE_INCLUDE_DIRS})
 
 # set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 # add_subdirectory(include/TestClass)
