first image class init

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,7 @@ project(ibvs)
 cmake_minimum_required(VERSION 3.0)
 
 add_executable(ibvs main.cpp)
-# target_link_libraries(ibvs PRIVATE Test)
-target_link_libraries(ibvs PRIVATE CameraClass)
+
+target_link_libraries(ibvs 
+                        PRIVATE CameraClass
+                        PRIVATE ImageClass)
