--- a/include/RobotClass/CMakeLists.txt
+++ b/include/RobotClass/CMakeLists.txt
@@ -6,8 +6,8 @@ add_library(RobotClass
             src/Robot.h)
 
 target_link_libraries(RobotClass
-                        )
+                    ServoClass)
 
 target_include_directories(RobotClass PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src") 
 
-message(STATUS " Finished measurment @: ${CMAKE_CURRENT_SOURCE_DIR}")
+message(STATUS " Finished robot @: ${CMAKE_CURRENT_SOURCE_DIR}")
