--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,4 +9,5 @@ target_link_libraries(ibvs
                         PRIVATE TrackingClass
                         PRIVATE MeasurementClass
                         PRIVATE RobotClass
+                        PRIVATE ServoClass
                         )
